# DeepBrainChain-3.0

./: Cargo.toml
docs/: DBC-3.0-UPGRADE-SUMMARY.md
docs/v3-design/: DBC-3.0-ARCH-v1.md  DBC-3.0-ECONOMY.md  DBC_3.0_STRATEGY_ANALYSIS.md  ZK-VERIFICATION-SPEC.md  agent_spec.md  circom-integration.md  compute-pool-scheduler.md  pallet-task-mode-design.md  zk-pallet-design.md
extrinsic-test/: e2e-test.mjs  package.json  precompile-test.mjs  precompile-write-test.mjs  test2.mjs
node/cli/: Cargo.toml
node/cli/src/: chain_spec.rs  rpc.rs
pallets/agent-attestation/: Cargo.toml
pallets/agent-attestation/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/compute-pool-scheduler/: Cargo.toml
pallets/compute-pool-scheduler/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/dbc3-rpc/: Cargo.toml
pallets/dbc3-rpc/runtime-api/: Cargo.toml
pallets/dbc3-rpc/runtime-api/src/: lib.rs
pallets/dbc3-rpc/src/: lib.rs
pallets/support/src/: traits.rs
pallets/task-mode/: Cargo.toml
pallets/task-mode/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/x402-settlement/: Cargo.toml
pallets/x402-settlement/rpc/: Cargo.toml
pallets/x402-settlement/rpc/runtime-api/: Cargo.toml
pallets/x402-settlement/rpc/runtime-api/src/: lib.rs
pallets/x402-settlement/rpc/src/: lib.rs
pallets/x402-settlement/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/zk-compute/: Cargo.toml
pallets/zk-compute/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
runtime/src/precompiles/: agent_task.rs  attestation.rs  compute_pool.rs  mod.rs  x402_settlement.rs  zk_compute.rs
tests/integration/: Cargo.toml
tests/integration/src/: lib.rs
