[package]
name = "pallet-agent-attestation"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
dbc-support = { path = "../support", default-features = false }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-io = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "frame-benchmarking?/std",
  "sp-runtime/std",
  "sp-std/std",
  "dbc-support/std",
  "sp-core/std",
  "sp-io/std",
  "pallet-balances/std",
]
try-runtime = ["frame-support/try-runtime"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks", "frame-system/runtime-benchmarks"]
