[package]
name = "pallet-compute-pool-scheduler"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Substrate pallet for compute pool scheduling in DBC 3.0"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
dbc-support = { path = "../support", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }

[features]
default = ["std"]
std = [
  "codec/std",
  "scale-info/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core/std",
  "sp-io/std",
  "pallet-balances/std",
  "sp-runtime/std",
  "sp-std/std",
  "dbc-support/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
