[package]
name = "x402-settlement-runtime-api"
version = { workspace = true }
authors = { workspace = true }
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
sp-api = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }

[features]
default = ["std"]
std = ["sp-api/std", "sp-std/std", "sp-core/std"]
